# wayfire-tests

./: .gitignore  .gitmodules  LICENSE  README.md  dev.sh  miniconfig.ini  repeat-fuzz.sh  run_nested.sh  run_replicate_fuzz.sh  run_tests.py  run_tests.sh
clients/: Makefile  gtk_click_to_close.cpp  gtk_color_switcher.cpp  gtk_drag_and_drop.cpp  gtk_layer_delayed_exclusive.cpp  gtk_layer_shell_kb_popup.cpp  gtk_logger.cpp  gtk_nested_popup.cpp  gtk_special.cpp  log.hpp  meson.build  wayfire2744.c  x11_click_to_close.cpp  x11_logger.cpp  x11_map_unmap.cpp  xdg_popup_crasher.c
docs/: test_format.md
expect-wrong/touch-dnd-complex/: main.py  wayfire.ini
ipc/: ipc.cpp  ipc.hpp  meson.build  plugin.cpp  wfipc
scripts/: wfimgcompare.py  wfscreenshot.py
staging/fuzz-test/: fuzz.py  fuzz.sh  fuzzy.py  main.py  wayfire.ini
tests/: exitcodes.sh
tests/basic/: main  main.py  options.sh  wayfire.ini
tests/blur/close-blurred-view/: main.py
tests/clients/firefox-menu/: main.py  wayfire.ini
tests/clients/gtk4-dnd-after-unmaximize/: main.py  wayfire.ini
tests/clients/kitty-maximize-restore/: main.py  wayfire.ini
tests/clients/wf-panel-close-popup-on-click/: main.py  wayfire.ini  wf-shell.ini
tests/clients/wleird-slow-ack/: main.py  wayfire.ini
tests/close-view/close-layer-shell/: main.py  wayfire.ini
tests/close-view/close-ssd/: main.py  wayfire.ini
tests/close-view/csd-close-weston-terminal/: main.py  wayfire.ini
tests/close-view/wayfire-1856/: main.py  wayfire.ini
tests/close-view/wayfire-1874/: main.py  wayfire.ini
tests/expect-wrong/touch-dnd-complex/: main.py
tests/expect-wrong/touch-expo-gesture-activation/: main.py
tests/general/shutdown/: main.py  wayfire.ini
tests/general/shutdown-2/: main.py  wayfire.ini
tests/general/tiled-move-drag-snapoff/: main.py  wayfire.ini  wf-shell.ini
tests/gui/: main  options.sh
tests/gui/expo-basic/: main.py  wayfire.ini
tests/gui/expo-rotated-scaled/: main.py  wayfire.ini
tests/gui/invert-works/: main.py  wayfire.ini
tests/gui/minimize-toggle-wf-panel/: main.py  wayfire.ini  wf-shell.ini
tests/gui/minimized-basic/: main.py  test_categories.txt  wayfire.ini
tests/gui/minimized-is-hidden/: main.py  wayfire.ini
tests/gui/move-damage-simple/: main.py
tests/gui/multiple-views-stacked/: main.py  wayfire.ini
tests/gui/multiple-views-stacked-180-scaled/: main.py  wayfire.ini
tests/gui/output-mirroring/: main.py  wayfire.ini
tests/gui/promoted-above-top/: main.py
tests/gui/promoted-transparent/: main.py
tests/gui/sublayers-basic/: main.py  wayfire.ini
tests/gui/subsurfaces-basic/: main.py  wayfire.ini
tests/gui/subsurfaces-place-below/: main.py
tests/gui/subsurfaces-reorder-rotate/: main.py  wayfire.ini
tests/gui/surface-transform/: main.py  wayfire.ini
tests/gui/wayfire-1886/: main.py  wayfire.ini
tests/im/fcitx-wrapper/: start-fcitx5.sh
tests/im/fcitx5-fast-switcher/: main.py  wayfire.ini
tests/im/fcitx5-keybinds/: main.py  wayfire.ini
tests/im/fcitx5-kill-while-pressed/: main.py  wayfire.ini
tests/im/fcitx5-pinyin-input/: main.py  script.sh
tests/im/fcitx5-popup-basic/: main.py  wayfire.ini
tests/im/fcitx5-restart/: main.py  wayfire.ini
tests/im/fcitx5-switcher/: main.py  script.sh  wayfire.ini
tests/im/wayfire-2175/: main.py  wayfire.ini
tests/keyboard/bindings-multi-output/: main.py  wayfire.ini
tests/keyboard/expo-grab/: main.py  wayfire.ini
tests/keyboard/forward-to-app-simple/: main.py
tests/keyboard/kbfocus-dialogs/: main.py  wayfire.ini
tests/keyboard/minimize-lose-focus/: main.py  wayfire.ini
tests/keyboard/wayfire-1204/: main.py  wayfire.ini
tests/keyboard/wayfire-1892/: main.py  wayfire.ini
tests/keyboard/wayfire-1960/: main.py  wayfire.ini
tests/keyboard/wayfire-2064/: main.py  wayfire.ini
tests/keyboard/wayfire-2118/: main.py  wayfire.ini
tests/keyboard/wayfire-2858/: main.py  wayfire.ini
tests/layer-shell/wayfire-2832/: main.py  wayfire.ini
tests/layer-shell/wayfire-2926/: client.py  main.py
tests/layer-shell/wayfire-937/: main.py  wayfire.ini
tests/multi-output/dnd-icon/: main.py  wayfire.ini
tests/multi-output/dnd-icon-xwayland/: main.py  wayfire.ini
tests/multi-output/drag-destroy-output/: main.py  wayfire.ini
tests/multi-output/noop-output/: main.py  wayfire.ini
tests/multi-output/views-between-outputs/: main.py  wayfire.ini
tests/multi-output/wayfire-1895/: main.py  wl1-disabled.ini  wl1-enabled.ini
tests/multi-output/wayfire-2356/: main.py  wayfire.ini
tests/pointer/basic-enter-leave-motion/: main.py  wayfire.ini
tests/pointer/basic-subsurfaces/: main.py  test_categories.txt  wayfire.ini
tests/pointer/dnd-drop-self/: main.py
tests/pointer/dnd-overrides-implicit-grab/: main.py
tests/pointer/implicit-grab-works/: main.py
tests/pointer/input-redirection-transformer/: main.py  wayfire.ini
tests/pointer/layers-ordering/: main.py  wayfire.ini
tests/pointer/minimized-loses-focus/: main.py  test_categories.txt  wayfire.ini
tests/pointer/new-view-grabs-focus/: main.py
tests/pointer/plugin-breaks-dnd/: main.py
tests/pointer/plugin-breaks-implicit-grab/: main.py  wayfire.ini
tests/pointer/pointer-constraints-basic/: main.py  wayfire.ini
tests/pointer/pointer-constraints-multioutput/: main.py  wayfire.ini
tests/pointer/wayfire-1955/: main.py  wayfire.ini
tests/stacking-order/dialog-simple/: main.py  test_categories.txt  wayfire.ini
tests/stacking-order/promoted-above-top/: main.py  test_categories.txt
tests/stacking-order/restack-and-close/: main.py  test_categories.txt  wayfire.ini
tests/stacking_order/restack_and_close/: main.py
tests/tablet/basic-functionality/: main.py
tests/tablet/close-grabbed-surface/: main.py
tests/tablet/implicit-grab-works/: main.py
tests/touch/close-grabbed-surface/: main.py
tests/touch/dnd-simple/: main.py
tests/touch/extra-gestures/: main.py  wayfire.ini
tests/xdg-popup-race/: main.py  wayfire.ini
wfpyipc/: wfipclib.py  wftest.py
wfpytest/: kill_process_group.py  wfipc  wfipclib.py  wftest.py  wfutil.py
(+242 files in other folders)
